--- a/tdservice.properties
+++ b/tdservice.properties
@@ -7,3 +7,4 @@ maxTDSequenceDurationSec=60
 maxProcessTimeSec=900
 tableDaysCount=7
 metricsEnabled=false
+topics=#{{'knk.app.1':'app1.knk-app-threads'}}
