--- a/tdservice.properties
+++ b/tdservice.properties
@@ -7,4 +7,4 @@ maxTDSequenceDurationSec=60
 maxProcessTimeSec=900
 tableDaysCount=7
 metricsEnabled=false
-topics=#{{'knk.app.1':'app1.knk-app-threads'}}
+topics={'knk.app.1':'app1.knk-app-threads'}
