--- a/tdservice.properties
+++ b/tdservice.properties
@@ -1,9 +1,10 @@
-bootstrapServer=localhost:9093
-username=dev
-password=dev
-clientIdPrefix=TDService-
+bootstrapServer=kafka-kd1.knk.local:9093,kafka-kd2.knk.local:9093,kafka-kd3.knk.local:9093
+username=kafka_kd
+password=kafka_kd
 tdStreamReregPeriodSec=120
 maxTDSequenceDurationSec=60
-maxProcessTimeSec=900
-tableDaysCount=7
-metricsEnabled=false
+metricsEnabled=true
+topicsDiscoveryPeriodSec=60
+topics={'(app|punterservice|liabilityservice|bettingservice|epservice-web|epservice|creditservice|cashoutservice)(\d+).*(knk|ggs|it|es).*-threads':'$3.$1.$2',\
+'(knk|ggs|es|it).changesserv(\d+)':'$1.changesserv.$2'}
+
