--- a/tdservice.properties
+++ b/tdservice.properties
@@ -5,6 +5,6 @@ tdStreamReregPeriodSec=120
 maxTDSequenceDurationSec=60
 metricsEnabled=true
 topicsDiscoveryPeriodSec=60
-topics={'(app|punterservice|liabilityservice|bettingservice|epservice-web|epservice|creditservice|cashoutservice)(\\d+).*(knk|ggs|it|es).*-threads':'$3.$1.$2',\
+topics={'(app|punterservice|liabilityservice|bettingservice|epservice-web|epservice|creditservice|cashoutservice)(\\d+)(\\.|-)(knk|ggs|it|es).*-threads':'$4.$1.$2',\
 '(knk|ggs|es|it).changesserv(\\d+)':'$1.changesserv.$2'}
 
