--- a/tdservice.properties
+++ b/tdservice.properties
@@ -6,5 +6,6 @@ maxTDSequenceDurationSec=60
 metricsEnabled=true
 topicsDiscoveryPeriodSec=60
 topics={'(app|punterservice|liabilityservice|bettingservice|epservice-web|epservice|creditservice|cashoutservice)(\\d+)(\\.|)(-|)(knk|ggs|it|es)(\\.|)(mhd|ams|).*-threads':'$5$4$7.$1.$2',\
-'(knk|ggs|es|it).changesserv(\\d+)':'$1.changesserv.$2'}
+'(knk|ggs).changesserv(\\d+)':'$1.changesserv.$2',\
+'(es|it).changesserv(\\d+)':'$1-mhd.changesserv.$2'}
 
